--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   
-  <iframe src="https://trinket.io/embed/python/70ffdc859d" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+  <iframe src="https://trinket.io/embed/python/70ffdc859d?runOption=console&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
 
 </html>
